# motion

./: .gitignore  .pylintrc  README.md  pyproject.toml  setup.py
.github/workflows/: pylint.yml  pytest.yaml
motion/: debug_dynamic.py  motion.py  static_motion.py
motion/utils/: transformations.py  utils.py
tests/: test_basic_usage.py
tests/tests_data/: edge_rot.npy  motion_1304.npy
